# deep-plug-and-play-prior

./: .gitignore  README.md  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
dppp/: __init__.py  callback.py  dmsp.py  hqs.py  metrics.py  types.py  utils.py
dppp/kernels/: README.txt
models/: README.md
notebooks/: example_deblur_dmsp.ipynb  example_deblur_hqs.ipynb  example_deblur_na_dmsp.ipynb  example_inpaint_dmsp.ipynb  example_inpaint_hqs.ipynb  example_lfsr_hqs.ipynb  example_sr_dmsp.ipynb  example_sr_hqs.ipynb  example_vsr_hqs.ipynb  explore_denoiser_noiselevel_dmsp_deblur.ipynb  explore_denoiser_noiselevel_dmsp_sr.ipynb
requirements/: requirements.txt  requirements_dev.txt  requirements_docker.txt
