[metadata]
name = deep-plug-and-play-prior
version = 0.1.0
description = Deep Plug-and-Play Priors
author = Benjamin Wilhelm
author_email = benjamin.wilhelm@uni-konstanz.de
url = https://github.com/HedgehogCode/deep-plug-and-play-prior
license_files = LICENSE

[options]
packages = find:
include_package_data = True
install_requires =
    tensorflow-addons
    tensorflow-probability
    scikit-image
    scipy
    image-similarity-measures